--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,9 @@ dependencies:
   flutter_rating_bar: ^4.0.1
   intl: ^0.19.0
   uuid: ^4.3.3
+  image_picker: ^1.2.1
+  qr_flutter: ^4.1.0
+  quickalert: ^1.1.0
 
 dev_dependencies:
   flutter_test:
